added new notes

--- a/Mathematics/Statistics/Probailistic-Finance.ipynb/Quantifying-Uncertainty.ipynb
+++ b/Mathematics/Statistics/Probailistic-Finance.ipynb/Quantifying-Uncertainty.ipynb
@@ -225,6 +225,105 @@
     "####  This limitation of CIs makes it utterly useless for data scientists who want to make inferences about population parameters from their specific data samples: i.e., they want to make postdata inferences. But, as was mentioned earlier, Neyman intended his CI theory to be used for only predata inferences based on long-term frequencies.\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Prior</th>\n",
+       "      <th>Likeli_Neg</th>\n",
+       "      <th>Joint1</th>\n",
+       "      <th>Posterior1</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Default</th>\n",
+       "      <td>0.1</td>\n",
+       "      <td>0.7</td>\n",
+       "      <td>0.07</td>\n",
+       "      <td>0.16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>No Default</th>\n",
+       "      <td>0.9</td>\n",
+       "      <td>0.4</td>\n",
+       "      <td>0.36</td>\n",
+       "      <td>0.84</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Prior  Likeli_Neg  Joint1  Posterior1\n",
+       "Default       0.1         0.7    0.07        0.16\n",
+       "No Default    0.9         0.4    0.36        0.84"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Import Python libraries\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Create a dataframe for your bond analysis\n",
+    "bonds = pd.DataFrame(index=['Default', 'No Default'])\n",
+    "\n",
+    "# The prior probability of default\n",
+    "# P(Default) = 0.10 and P(No Default) = 0.90\n",
+    "\n",
+    "bonds['Prior'] = 0.10, 0.90\n",
+    "\n",
+    "# The likelihood functions for observing negative ratings\n",
+    "# P(Negative|Default) = 0.70 and P(Negative|No Default) = 0.40\n",
+    "\n",
+    "bonds['Likeli_Neg'] = 0.70, 0.40\n",
+    "\n",
+    "# Joint probabilities of seeing a negative rating depending on \n",
+    "# default or no default\n",
+    "# P(Negative|Default) * P(Default) and P(Negative|No Default) * P(No Default)\n",
+    "\n",
+    "bonds['Joint1'] = bonds['Likeli_Neg'] * bonds['Prior']\n",
+    "\n",
+    "# Add the joint probabilities to get the marginal likelihood or unconditional \n",
+    "# probability of observing a negative rating\n",
+    "# P(Negative) = P(Negative|Default) * P(Default) + P(Negative|No Default) * P(No Default)\n",
+    "\n",
+    "prob_neg_data = bonds['Joint1'].sum()\n",
+    "\n",
+    "# Use the inverse probability rule to calculate the updated probability of\n",
+    "# default based on the new negative rating and then print the data table.\n",
+    "\n",
+    "bonds['Posterior1'] = bonds['Likeli_Neg'] * bonds['Prior']/prob_neg_data\n",
+    "bonds.round(2)"
+   ]
   }
  ],
  "metadata": {
