added new notes

--- a/Mathematics/Statistics/Statistical-Models/Sampling-Generalization.ipynb
+++ b/Mathematics/Statistics/Statistical-Models/Sampling-Generalization.ipynb
@@ -20,6 +20,19 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## Random assignment of treatments\n",
+    "\n",
+    "#### The random assignment of treatments refers to two motivators:\n",
+    "\n",
+    "#### The first motivator is to gain an understanding of specific input variables and their influence on the response – for example, understanding whether assigning treatment A to a specific individual may produce more favorable outcomes than a placebo.\n",
+    "\n",
+    "#### The second motivator is to remove the impact of external variables on the outcomes of a study. These external variables, called confounding variables (or confounders), are important to remove as they often prove difficult to control. They may have unpredictable values or even be unknown to the researcher. The consequence of including confounders is that the outcomes of a study may not be replicable, which can be costly. While confounders can influence outcomes, they can also influence input variables, as well as the relationships between those variables."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
