--- a/Mathematics/Statistics/Statistical-Models/Distributions.ipynb
+++ b/Mathematics/Statistics/Statistical-Models/Distributions.ipynb
@@ -54,6 +54,33 @@
     "ax[1].set_xlabel('Temperature (F)')\n",
     "fig.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The quartiles are Q1: 71,Q2: 85, Q3: 88\n",
+      "The interquartile range is 17\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "from scipy import stats\n",
+    "values = [85, 99, 70, 71, 86, 88, 94]\n",
+    "quartiles = np.quantile(values, [0.25, 0.5, 0.75],\n",
+    "    method=\"closest_observation\")\n",
+    "print(f\"The quartiles are Q1: {quartiles[0]},Q2: {quartiles[1]}, Q3: {quartiles[2]}\")\n",
+    "iqr = stats.iqr(values,interpolation='closest_observation')\n",
+    "print(f\"The interquartile range is {iqr}\")\n",
+    "# The quartiles are Q1: 71, Q2: 85, Q3: 88\n",
+    "# The interquartile range is 17"
+   ]
   }
  ],
  "metadata": {
