added new models

--- a/Mathematics/Statistics/Statistical-Models/Distributions.ipynb
+++ b/Mathematics/Statistics/Statistical-Models/Distributions.ipynb
@@ -81,6 +81,50 @@
     "# The quartiles are Q1: 71, Q2: 85, Q3: 88\n",
     "# The interquartile range is 17"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The skewness value of this left skewed distribution is -0.988\n",
+      "The skewness value of this right skewed distribution is 0.963\n",
+      "The skewness value of this symmetric distributionis 0.003\n"
+     ]
+    }
+   ],
+   "source": [
+    "from scipy.stats import skewnorm, norm\n",
+    "from scipy.stats import skew as skew_calc\n",
+    "# generate data\n",
+    "skew_left = -skewnorm.rvs(10, size=3000) + 4\n",
+    "skew_right = skewnorm.rvs(10, size=3000) + 3\n",
+    "symmetric = norm.rvs(10, size=3000)\n",
+    "# calculate skewness\n",
+    "skew_left_value = skew_calc(skew_left)\n",
+    "skew_right_value = skew_calc(skew_right)\n",
+    "symmetric_value = skew_calc(symmetric)\n",
+    "# Output may vary some due to randomness of generated data\n",
+    "print(f\"The skewness value of this left skewed distribution is {skew_left_value:.3f}\")\n",
+    "print(f\"The skewness value of this right skewed distribution is {skew_right_value:.3f}\")\n",
+    "print(f\"The skewness value of this symmetric distributionis {symmetric_value:.3f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "####  A light-tailed distribution means that more of the data is near or around the mode of the distribution. In contrast, a heavy-tailed distribution means that more of the data is at the edges of the distribution than near the mode. A light-tailed distribution, a normal distribution, and a heavy-tailed distribution"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
