added new notes

--- a/Mathematics/Statistics/Statistical-Models/Distributions.ipynb
+++ b/Mathematics/Statistics/Statistical-Models/Distributions.ipynb
@@ -122,9 +122,37 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The kurtosis value of this light-tailed distribution is -0.977\n",
+      "The kurtosis value of this heavy_tailed distribution is 2.534\n",
+      "The kurtosis value of this normal distribution is 0.002\n"
+     ]
+    }
+   ],
+   "source": [
+    "from scipy.stats import norm\n",
+    "from scipy.stats import gennorm\n",
+    "from scipy.stats import kurtosis\n",
+    "# generate data\n",
+    "light_tailed = gennorm.rvs(5, size=3000)\n",
+    "symmetric = norm.rvs(10, size=3000)\n",
+    "heavy_tailed = gennorm.rvs(1, size=3000)\n",
+    "# calculate skewness\n",
+    "light_tailed_value = kurtosis(light_tailed)\n",
+    "heavy_tailed_value = kurtosis(heavy_tailed)\n",
+    "symmetric_value = kurtosis(symmetric)\n",
+    "# Output may vary some due to randomness of generated data\n",
+    "print(f\"The kurtosis value of this light-tailed distribution is {light_tailed_value:.3f}\")\n",
+    "print(f\"The kurtosis value of this heavy_tailed distribution is {heavy_tailed_value:.3f}\")\n",
+    "print(f\"The kurtosis value of this normal distribution is {symmetric_value:.3f}\")"
+   ]
   }
  ],
  "metadata": {
