added new notes

--- a/Mathematics/Statistics/Intro-Probability/Bayes-Theorem.ipynb
+++ b/Mathematics/Statistics/Intro-Probability/Bayes-Theorem.ipynb
@@ -90,6 +90,30 @@
     "#### An important property of Bayes’ rule is that it is coherent : if we receive multiple pieces of information and wish to update our probabilities to incorporate all the information, it does not matter whether we update sequentially, taking each piece of evidence into account one at a time, or simultaneously, using all the evidence at once. Suppose, for example, that we’re conducting a weeklong experiment that yields data at the end of each day. We could use Bayes’ rule every day to update our probabilities based on the data from that day. Or we could go on vacation for the week, come back on Friday afternoon, and update using the entire week’s worth of data. Either method will give the same result.\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercises"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1: A spam filter is designed by looking at commonly occurring phrases in spam. Suppose that 80% of email is spam. In 10% of the spam emails, the phrase “free money” is used, whereas this phrase is only used in 1% of non-spam emails. A new email has just arrived, which does mention “free money”. What is the probability that it is spam?\n",
+    "\n",
+    "\n",
+    "#### Problem Breakdown:\n",
+    "- P(S) = 0.8\n",
+    "- P( S| free money is in the email) = 0.10\n",
+    "- P(Not Spam) = 0.20\n",
+    "- P(Not Spam | Free money is in the email) = 0.001\n",
+    "\n",
+    "What is P(Spam | \"Free Money\" is in the email)\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
