added new models

--- a/Mathematics/Statistics/Intro-Probability/Bayes-Theorem.ipynb
+++ b/Mathematics/Statistics/Intro-Probability/Bayes-Theorem.ipynb
@@ -111,8 +111,11 @@
     "- P(Not Spam) = 0.20\n",
     "- P(Not Spam | Free money is in the email) = 0.001\n",
     "\n",
-    "What is P(Spam | \"Free Money\" is in the email)\n",
-    "\n"
+    "#### What is P(Spam | \"Free Money\" is in the email) ?\n",
+    "\n",
+    "#### Bayes Rule = P(A|B) = P(B|A) * P(A) / P(B)\n",
+    "\n",
+    "- P(Free Money | SPAM) * P(Spam) / P(Free Money) = "
    ]
   }
  ],
