added new nodes

--- a/Mathematics/Statistics/Intro-Probability/Bayes-Theorem.ipynb
+++ b/Mathematics/Statistics/Intro-Probability/Bayes-Theorem.ipynb
@@ -115,8 +115,35 @@
     "\n",
     "#### Bayes Rule = P(A|B) = P(B|A) * P(A) / P(B)\n",
     "\n",
-    "- P(Free Money | SPAM) * P(Spam) / P(Free Money) = "
+    "- P(Free Money | SPAM) * P(Spam) / P(Free Money) = ((0.20 * 0.80) * 0.8) / 0.10 ="
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.2800000000000002"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "((0.20 * 0.80) * 0.8) /0.10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
