--- a/Mathematics/Statistics/Intro-Probability/Bayes-Theorem.ipynb
+++ b/Mathematics/Statistics/Intro-Probability/Bayes-Theorem.ipynb
@@ -107,43 +107,36 @@
     "\n",
     "#### Problem Breakdown:\n",
     "- P(S) = 0.8\n",
-    "- P( S| free money is in the email) = 0.10\n",
+    "- P(Free Money | Spam) = 0.10\n",
     "- P(Not Spam) = 0.20\n",
-    "- P(Not Spam | Free money is in the email) = 0.001\n",
+    "- P(Free money is in the email | Spam) = 0.001\n",
     "\n",
     "#### What is P(Spam | \"Free Money\" is in the email) ?\n",
     "\n",
     "#### Bayes Rule = P(A|B) = P(B|A) * P(A) / P(B)\n",
     "\n",
-    "- P(Free Money | SPAM) * P(Spam) / P(Free Money) = ((0.20 * 0.80) * 0.8) / 0.10 ="
+    "- P(Free Money | SPAM) * P(Spam) / P(Free Money) = (0.10 * 0.8 ) / ((0.10 * 0.8 )+ (0.001 *0.2))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1.2800000000000002"
+       "0.997506234413965"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "((0.20 * 0.80) * 0.8) /0.10"
+    "(0.10 * 0.8 ) / ((0.10 * 0.8 )+ (0.001 *0.2))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
