--- a/Mathematics/Statistics/Intro-Probability/Bayes-Theorem.ipynb
+++ b/Mathematics/Statistics/Intro-Probability/Bayes-Theorem.ipynb
@@ -137,6 +137,42 @@
    "source": [
     "(0.10 * 0.8 ) / ((0.10 * 0.8 )+ (0.001 *0.2))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2: A woman is pregnant with twin boys. Twins may be either identical or fraternal (non-identical). In general, 1/3 of twins born are identical. Obviously, identical twins must be of the same sex; fraternal twins may or may not be. Assume that identical twins are equally likely to be both boys or both girls, while for fraternal twins all possibilities are equally likely. Given the above information, what is the probability that the woman’s twins are identical?\n",
+    "\n",
+    "#### Problem Breakdown:\n",
+    "- P(Identical | Twins) = 1/3 = 0.33\n",
+    "- P(Fraternal | twins) = 2/3\n",
+    "- P(B) = 0.5\n",
+    "\n",
+    "#### Problem Statement = P(identical | Twins and Both Boys)\n",
+    "\n",
+    "- P(T N B | I) * P(Identical) = (1/2) * 1/3  / (1/3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(1/2) * 1/3  / (1/3)"
+   ]
   }
  ],
  "metadata": {
