--- a/Mathematics/Statistics/Intro-Probability/Bayes-Theorem.ipynb
+++ b/Mathematics/Statistics/Intro-Probability/Bayes-Theorem.ipynb
@@ -173,6 +173,46 @@
    "source": [
     "(1/2) * 1/3  / (1/3)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3: According to the CDC (Centers for Disease Control and Prevention), men who smoke are 23 times more likely to develop lung cancer than men who don’t smoke. Also according to the CDC, 21.6% of men in the U.S. smoke. What is the probability that a man in the U.S. is a smoker, given that he develops lung cancer?\n",
+    "\n",
+    "#### Problem Breakdown\n",
+    "\n",
+    "- P(Smoke) = 0.216\n",
+    "- P(Not Smoke) = 0.7814\n",
+    "- Men who smoke are 23 times more likely to get lung cancer\n",
+    "- P(Lung Cancer) = P(Lung Cancer | Smoke) * P(Smoke)  + P(Lung Cancer | Not Smoke) * P(Not Smoke) = (23x⋅0.216)+(x⋅0.784)\n",
+    "- P(Lung Cancer)= 4.968x+0.784x\n",
+    "- P(Lung Cancer)=5.752x\n",
+    "\n",
+    "#### Need To Solve: P(Smoke | Lung Cancer):\n",
+    "\n",
+    "P(Lung Cancer | Smoke ) * P(Smoke) / P(Lung Cancer) =   23x * 0.216/ (5.752x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8636995827538247"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(23 * 0.216)/ (5.752)"
+   ]
   }
  ],
  "metadata": {
