--- a/Mathematics/Statistics/Intro-Probability/Bayes-Theorem.ipynb
+++ b/Mathematics/Statistics/Intro-Probability/Bayes-Theorem.ipynb
@@ -219,8 +219,12 @@
    "metadata": {},
    "source": [
     "#### Fred is answering a multiple-choice problem on an exam, and has to choose one of n options (exactly one of which is correct). Let K be the event that he knows the answer, and R be the event that he gets the problem right (either through knowledge or through luck). Suppose that if he knows the right answer he will definitely get the problem right, but if he does not know then he will guess completely randomly. Let P(K) = p.\n",
-    "- (a) Find P(K|R) (in terms of p and n).\n",
-    "- (b) Show that P(K|R) ≥ p, and explain why this makes sense intuitively. When (if ever) does P(K|R) equal p?"
+    "#### (a) Find P(K|R) (in terms of p and n).\n",
+    "#### (b) Show that P(K|R) ≥ p, and explain why this makes sense intuitively. When (if ever) does P(K|R) equal p?\n",
+    "\n",
+    "- P(K) = He knows the answer\n",
+    "- P(R) = He guesses the right answer \n",
+    "- P(R | K)"
    ]
   }
  ],
