added new notes

--- a/Mathematics/Statistics/Intro-Probability/Bayes-Theorem.ipynb
+++ b/Mathematics/Statistics/Intro-Probability/Bayes-Theorem.ipynb
@@ -224,7 +224,11 @@
     "\n",
     "- P(K) = He knows the answer\n",
     "- P(R) = He guesses the right answer \n",
-    "- P(R | K)"
+    "- P(R | K) = 1\n",
+    "- P(KC) = 1-p: Probability Fred does not know the answer\n",
+    "\n",
+    "#### P(K | R) = P(R | K) * P(K) / P(R)\n",
+    "\n"
    ]
   }
  ],
