added new notes

--- a/Mathematics/Statistics/Intro-Probability/Bayes-Theorem.ipynb
+++ b/Mathematics/Statistics/Intro-Probability/Bayes-Theorem.ipynb
@@ -95,6 +95,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## LATOP\n",
+    "\n",
+    "- P(B) = P(B | A) * P(A) + P(B | Ac) * P(Ac)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Exercises"
    ]
   },
