--- a/Mathematics/Statistics/Intro-Probability/Bayes-Theorem.ipynb
+++ b/Mathematics/Statistics/Intro-Probability/Bayes-Theorem.ipynb
@@ -231,12 +231,19 @@
     "#### (a) Find P(K|R) (in terms of p and n).\n",
     "#### (b) Show that P(K|R) ≥ p, and explain why this makes sense intuitively. When (if ever) does P(K|R) equal p?\n",
     "\n",
-    "- P(K) = He knows the answer\n",
+    "- P(K) = He knows the answer = p\n",
     "- P(R) = He guesses the right answer \n",
     "- P(R | K) = 1\n",
     "- P(KC) = 1-p: Probability Fred does not know the answer\n",
     "\n",
     "#### P(K | R) = P(R | K) * P(K) / P(R)\n",
+    "\n",
+    "- P(R) = P(R |K) * P(K) + P(R |KC) * P(KC) = (1 * p )+ (1/n * 1-p) = p + 1-p/n\n",
+    "\n",
+    "p \n",
+    "\n",
+    "/\n",
+    "p + (1 -p/n )\n",
     "\n"
    ]
   }
