added new notes

--- a/Mathematics/Statistics/Intro-Probability/Bayes-Theorem.ipynb
+++ b/Mathematics/Statistics/Intro-Probability/Bayes-Theorem.ipynb
@@ -246,6 +246,17 @@
     "p + (1 -p/n )\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise 4: Three cards are dealt from a standard, well-shuffled, deck. The first two cards are flipped over, revealing the Ace of Spades as the first card and the 8 of Clubs as the second card. Given this information, find the probability that the third card is an ace in two ways: using the definition of conditional probability, and by symmetry.\n",
+    "\n",
+    "#### conditional probability is: P(A N B) / P(B)\n",
+    "\n",
+    "- P(A | B) = 3/50"
+   ]
   }
  ],
  "metadata": {
