--- a/Mathematics/Statistics/Bayesian-Analysis-WT-Py/Thinking-Probabilisitcally.ipynb
+++ b/Mathematics/Statistics/Bayesian-Analysis-WT-Py/Thinking-Probabilisitcally.ipynb
@@ -21,7 +21,13 @@
     "\n",
     "## Posterior Distribution\n",
     "\n",
-    "#### The posterior distribution is the result of the Bayesian analysis and reflects all that we know about a problem (given our data and model). The posterior is a probability distribution for the parameters in our model and not a single value. \n"
+    "#### The posterior distribution is the result of the Bayesian analysis and reflects all that we know about a problem (given our data and model). The posterior is a probability distribution for the parameters in our model and not a single value. \n",
+    "\n",
+    "## Marginal Likelihood\n",
+    "\n",
+    "#### The last term is the marginal likelihood, sometimes referred to as the evidence. Formally, the marginal likelihood is the probability of observing the data averaged over all the possible values the parameters can take (as prescribed by the prior). We can write this as ∫ Θp(Y |θ)p(θ)dθ. We will not really care about the marginal likelihood until Chapter 5. But for the moment, we can think of it as a normalization factor that ensures the posterior is a proper pmf or pdf. If we ignore the marginal likelihood, we can write Bayes’ theorem as a proportionality, which is also a common way to write Bayes’ theorem:\n",
+    "\n",
+    "- p(θ | Y ) ∝ p(Y | θ)p(θ) "
    ]
   },
   {
