added new models

--- a/Mathematics/Statistics/Bayesian-Analysis-WT-Py/Thinking-Probabilisitcally.ipynb
+++ b/Mathematics/Statistics/Bayesian-Analysis-WT-Py/Thinking-Probabilisitcally.ipynb
@@ -27,13 +27,15 @@
     "\n",
     "#### The last term is the marginal likelihood, sometimes referred to as the evidence. Formally, the marginal likelihood is the probability of observing the data averaged over all the possible values the parameters can take (as prescribed by the prior). We can write this as ∫ Θp(Y |θ)p(θ)dθ. We will not really care about the marginal likelihood until Chapter 5. But for the moment, we can think of it as a normalization factor that ensures the posterior is a proper pmf or pdf. If we ignore the marginal likelihood, we can write Bayes’ theorem as a proportionality, which is also a common way to write Bayes’ theorem:\n",
     "\n",
-    "- p(θ | Y ) ∝ p(Y | θ)p(θ) "
+    "- p(θ | Y ) ∝ p(Y | θ)p(θ) \n",
+    "\n",
+    "\n",
+    "- The result of a Bayesian analysis is a posterior distribution – not a single value but a distribution of plausible values given the data and our model.\n",
+    "\n",
+    "- The most probable value is given by the mode of the posterior (the peak of the distribution).\n",
+    "\n",
+    "- The spread of the posterior is proportional to the uncertainty about the value of a parameter; the more spread out the distribution, the less certain we are."
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
