added new notes

--- a/Mathematics/Statistics/Probaility-Jason-Brown-Lee/Uncertainty-ML.ipynb
+++ b/Mathematics/Statistics/Probaility-Jason-Brown-Lee/Uncertainty-ML.ipynb
@@ -18,6 +18,21 @@
     "\n",
     "#### In many cases, it is more practical to use a simple but uncertain rule rather than a complex but certain one, even if the true rule is deterministic and our modeling system has the fidelity to accommodate a complex rule."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Joint probability is the probability of two or more events occurring simultaneously.\n",
+    "- Marginal probability is the probability of an event irrespective of the outcome of other\n",
+    "variables\n",
+    "- Conditional probability is the probability of one event occurring in the presence of one or more other events."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
