added new notes

--- a/Mathematics/Statistics/Probaility-Jason-Brown-Lee/Uncertainty-ML.ipynb
+++ b/Mathematics/Statistics/Probaility-Jason-Brown-Lee/Uncertainty-ML.ipynb
@@ -32,7 +32,12 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "- Joint Probability: Probability of events A and B.\n",
+    "- Marginal Probability: Probability of event A given variable Y .\n",
+    "- Conditional Probability: Probability of event A given event B.\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
