added new notes

--- a/Mathematics/Statistics/Probaility-Jason-Brown-Lee/Uncertainty-ML.ipynb
+++ b/Mathematics/Statistics/Probaility-Jason-Brown-Lee/Uncertainty-ML.ipynb
@@ -36,8 +36,17 @@
     "- Joint Probability: Probability of events A and B.\n",
     "- Marginal Probability: Probability of event A given variable Y .\n",
     "- Conditional Probability: Probability of event A given event B.\n",
-    "\n"
+    "\n",
+    "- The probability of a row of data is the joint probability across each input variable.\n",
+    "- The probability of a specific value of one input variable is the marginal probability across\n",
+    "the values of the other input variables.\n",
+    "- The predictive model itself is an estimate of the conditional probability of an output given an input example."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
