added new notes

--- a/Mathematics/Statistics/Probaility-Jason-Brown-Lee/Uncertainty-ML.ipynb
+++ b/Mathematics/Statistics/Probaility-Jason-Brown-Lee/Uncertainty-ML.ipynb
@@ -46,6 +46,18 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## Joint Probability for Two Variables\n",
+    "\n",
+    "#### We may be interested in the probability of two simultaneous events, e.g. the outcomes of two different random variables. The probability of two (or more) events is called the joint probability.\n",
+    "\n",
+    "#### The joint probability for events A and B is calculated as the probability of event A given event B multiplied by the probability of event B. This can be stated formally as follows:\n",
+    "- P(A ∩ B) = P(A given B) × P(B)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
