added new notes

--- a/Mathematics/Statistics/Probaility-Jason-Brown-Lee/Uncertainty-ML.ipynb
+++ b/Mathematics/Statistics/Probaility-Jason-Brown-Lee/Uncertainty-ML.ipynb
@@ -58,6 +58,15 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## Marginal Probability\n",
+    "\n",
+    "#### We may be interested in the probability of an event for one random variable, irrespective of the outcome of another random variable. For example, the probability of X = A for all outcomes of Y . The probability of one event in the presence of all (or a subset of) outcomes of the other random variable is called the marginal probability or the marginal distribution. The marginal probability of one random variable in the presence of additional random variables is referred to as the marginal probability distribution."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
