added new notes

--- a/Mathematics/Statistics/Probaility-Jason-Brown-Lee/Uncertainty-ML.ipynb
+++ b/Mathematics/Statistics/Probaility-Jason-Brown-Lee/Uncertainty-ML.ipynb
@@ -67,6 +67,42 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## Independence\n",
+    "\n",
+    "#### If one variable is not dependent on a second variable, this is called independence or statistical independence. This has an impact on calculating the probabilities of the two variables. For example, we may be interested in the joint probability of independent events A and B, which is the same as the probability of A and the probability of B. Probabilities are combined using multiplication, therefore the joint probability of independent events is calculated as the probability of event A multiplied by the probability of event B. This can be stated formally as follows: Joint Probability : \n",
+    "- P (A ∩ B) = P (A) × P (B)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### We refer to the marginal probability of an independent probability as simply the probability. Similarly, the conditional probability of A given B when the variables are independent is simply the probability of A as the probability of B has no effect. For example:\n",
+    "- Conditional Probability : P (A|B) = P (A)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exclusivity\n",
+    "#### If the occurrence of one event excludes the occurrence of other events, then the events are said to be mutually exclusive. The probability of the events are said to be disjoint, meaning that they cannot interact, are strictly independent. If the probability of event A is mutually exclusive with event B, then the joint probability of event A and event B is zero.\n",
+    "- P(A ∩ B) = 0.0 \n",
+    "\n",
+    "#### Instead, the probability of an outcome can be described as event A or event B, stated formally as follows:\n",
+    "- P(A or B) = P(A) + P(B)\n",
+    "\n",
+    "#### The or is also called a union and is denoted as a capital U letter (∪); for example:\n",
+    "- P(A or B) = P(A ∪ B)\n",
+    "\n",
+    "#### If the events are not mutually exclusive, we may be interested in the outcome of either event. The probability of non-mutually exclusive events is calculated as the probability of event A and the probability of event B minus the probability of both events occurring simultaneously. This can be stated formally as follows:\n",
+    "- P(A ∪ B) = P(A) + P(B) − P(A ∩ B)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
