--- a/Mathematics/Statistics/Probaility-Jason-Brown-Lee/Uncertainty-ML.ipynb
+++ b/Mathematics/Statistics/Probaility-Jason-Brown-Lee/Uncertainty-ML.ipynb
@@ -99,11 +99,6 @@
     "#### If the events are not mutually exclusive, we may be interested in the outcome of either event. The probability of non-mutually exclusive events is calculated as the probability of event A and the probability of event B minus the probability of both events occurring simultaneously. This can be stated formally as follows:\n",
     "- P(A ∪ B) = P(A) + P(B) − P(A ∩ B)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
@@ -113,7 +108,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.9.19"
   }
  },
