added new notes

--- a/Mathematics/Statistics/Probaility-Jason-Brown-Lee/Distribution.ipynb
+++ b/Mathematics/Statistics/Probaility-Jason-Brown-Lee/Distribution.ipynb
@@ -26,7 +26,13 @@
     "\n",
     "- Probability Mass Function. Probability for a value for a discrete random variable.\n",
     "- Cumulative Distribution Function. Probability less than or equal to a value for a\n",
-    "random variable."
+    "random variable.\n",
+    "\n",
+    "## Continuous Probability Distributions\n",
+    "#### A continuous probability distribution summarizes the probability for a continuous random variable. The probability distribution function, or PDF, defines the probability distribution for a continuous random variable. Note the difference in the name from the discrete random variable that has a probability mass function, or PMF. Like a discrete probability distribution, the continuous probability distribution also has a cumulative distribution function, or CDF, that defines the probability of a value less than or equal to a specific numerical value from the domain.\n",
+    "\n",
+    "- Probability Distribution Function. Probability for a value for a continuous random variable.\n",
+    "- Cumulative Distribution Function. Probability less than or equal to a value for a random variable."
    ]
   }
  ],
