--- a/Mathematics/Statistics/Probaility-Jason-Brown-Lee/Distribution.ipynb
+++ b/Mathematics/Statistics/Probaility-Jason-Brown-Lee/Distribution.ipynb
@@ -34,6 +34,104 @@
     "- Probability Distribution Function. Probability for a value for a continuous random variable.\n",
     "- Cumulative Distribution Function. Probability less than or equal to a value for a random variable."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total Success: 33\n"
+     ]
+    }
+   ],
+   "source": [
+    "# example of simulating a binomial process and counting success\n",
+    "from numpy.random import binomial\n",
+    "import numpy as np\n",
+    "# define the parameters of the distribution \n",
+    "p = 0.3\n",
+    "k = 100\n",
+    "# run a single simulation\n",
+    "success = binomial(k, p)\n",
+    "print('Total Success: %d' % success)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean=30.000, Variance=21.000\n",
+      "Sqrt 4.58257569495584\n"
+     ]
+    }
+   ],
+   "source": [
+    "# calculate moments of a binomial distribution\n",
+    "from scipy.stats import binom\n",
+    "# define the parameters of the distribution\n",
+    "p = 0.3\n",
+    "k = 100\n",
+    "# calculate moments\n",
+    "mean, var, _, _ = binom.stats(k, p, moments='mvsk') \n",
+    "print('Mean=%.3f, Variance=%.3f' % (mean, var))\n",
+    "print(\"Sqrt\", np.sqrt(var))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### We can calculate the moments of this distribution, specifically the expected value or mean and the variance using the binom.stats() SciPy function. Running the example reports the expected value of the distribution, which is 30, as we would expect, as well as the variance of 21, which if we calculate the square root, gives us the standard deviation of about 4.5.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### We can use the probability mass function to calculate the likelihood of different numbers of successful outcomes for a sequence of trials, such as 10, 20, 30, to 100. We would expect 30 successful outcomes to have the highest probability."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "P of 10 success: 0.000%\n",
+      "P of 20 success: 0.758%\n",
+      "P of 30 success: 8.678%\n",
+      "P of 40 success: 0.849%\n",
+      "P of 50 success: 0.001%\n",
+      "P of 60 success: 0.000%\n",
+      "P of 70 success: 0.000%\n",
+      "P of 80 success: 0.000%\n",
+      "P of 90 success: 0.000%\n",
+      "P of 100 success: 0.000%\n"
+     ]
+    }
+   ],
+   "source": [
+    "# define the parameters of the distribution\n",
+    "p = 0.3\n",
+    "k = 100\n",
+    "# define the distribution\n",
+    "dist = binom(k, p)\n",
+    "# calculate the probability of n successes\n",
+    "for n in range(10, 110, 10):\n",
+    "  print('P of %d success: %.3f%%' % (n, dist.pmf(n)*100))"
+   ]
   }
  ],
  "metadata": {
@@ -43,7 +141,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.9.19"
   }
  },
