added new notes

--- a/Mathematics/Statistics/Probaility-Jason-Brown-Lee/Distribution.ipynb
+++ b/Mathematics/Statistics/Probaility-Jason-Brown-Lee/Distribution.ipynb
@@ -172,6 +172,41 @@
    "source": [
     "#### The PMF (Probability Mass Function) function is used to calculate the likelihood or probability of achieving a specific number of successes, which you specify as an input to the function, in a given number of trials (defined by the binomial distribution parameters)."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "P of 10 success: 0.000%\n",
+      "P of 20 success: 1.646%\n",
+      "P of 30 success: 54.912%\n",
+      "P of 40 success: 98.750%\n",
+      "P of 50 success: 99.999%\n",
+      "P of 60 success: 100.000%\n",
+      "P of 70 success: 100.000%\n",
+      "P of 80 success: 100.000%\n",
+      "P of 90 success: 100.000%\n",
+      "P of 100 success: 100.000%\n"
+     ]
+    }
+   ],
+   "source": [
+    "# example of using the cdf for the binomial distribution\n",
+    "from scipy.stats import binom\n",
+    "# define the parameters of the distribution\n",
+    "p = 0.3\n",
+    "k = 100\n",
+    "# define the distribution\n",
+    "dist = binom(k, p)\n",
+    "# calculate the probability of <=n successes\n",
+    "for n in range(10, 110, 10):\n",
+    "  print('P of %d success: %.3f%%' % (n, dist.cdf(n)*100))"
+   ]
   }
  ],
  "metadata": {
