added new notes

--- a/Mathematics/Statistics/Probaility-Jason-Brown-Lee/Distribution.ipynb
+++ b/Mathematics/Statistics/Probaility-Jason-Brown-Lee/Distribution.ipynb
@@ -207,6 +207,17 @@
     "for n in range(10, 110, 10):\n",
     "  print('P of %d success: %.3f%%' % (n, dist.cdf(n)*100))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Why Use the CDF?\n",
+    "- The CDF is particularly useful when you need to understand the probability of achieving a result within a certain range. For instance, in quality control or risk management, you might want to know the likelihood of achieving no more than a certain number of defects or failures.\n",
+    "\n",
+    "## Summary\n",
+    "- The CDF provides cumulative probabilities, offering a broader view of the likelihood of outcomes up to a specified threshold. It's an essential function for probability distributions as it helps in understanding the spread and tendencies of the data or outcomes in probabilistic terms."
+   ]
   }
  ],
  "metadata": {
