added new notes

--- a/Mathematics/Statistics/Probaility-Jason-Brown-Lee/Distribution.ipynb
+++ b/Mathematics/Statistics/Probaility-Jason-Brown-Lee/Distribution.ipynb
@@ -218,6 +218,25 @@
     "## Summary\n",
     "- The CDF provides cumulative probabilities, offering a broader view of the likelihood of outcomes up to a specified threshold. It's an essential function for probability distributions as it helps in understanding the spread and tendencies of the data or outcomes in probabilistic terms."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Using the Cumulative Distribution Function (CDF)\n",
+    "- The CDF is used when you are interested in probabilities up to and including a certain value. It is helpful when:\n",
+    "\n",
+    "- Range of Outcomes: You need the probability of an event occurring within a range of outcomes. For example, you might want to know the probability of a project taking up to 30 days to complete or the probability of a store receiving up to 100 customers in a day.\n",
+    "- Less Than or Equal Queries: When your question involves conditions of \"less than or equal to\" (≤), the CDF directly provides this cumulative probability.\n",
+    "\n",
+    "- Example Scenario: If you want to assess the risk of a new product failing to meet sales targets, and you need to know the probability that it will sell fewer than 500 units in the first month, you would use the CDF.\n",
+    "\n",
+    "## Using the Probability Mass Function (PMF)\n",
+    "- The PMF is used when you want to find the probability of the random variable being exactly equal to a specific value. This is particularly useful when:\n",
+    "\n",
+    "- Specific Outcomes: You need the probability of an event occurring in exactly a specific way, such as the probability of a die rolling a six, or the probability of exactly 15 customers arriving in an hour.\n",
+    "- Discrete Events: The PMF is applicable only to discrete random variables, where outcomes can be distinctly listed out (e.g., number of heads in coin tosses)."
+   ]
   }
  ],
  "metadata": {
