added new notes

--- a/Mathematics/Statistics/Probaility-Jason-Brown-Lee/Distribution.ipynb
+++ b/Mathematics/Statistics/Probaility-Jason-Brown-Lee/Distribution.ipynb
@@ -237,6 +237,71 @@
     "- Specific Outcomes: You need the probability of an event occurring in exactly a specific way, such as the probability of a die rolling a six, or the probability of exactly 15 customers arriving in an hour.\n",
     "- Discrete Events: The PMF is applicable only to discrete random variables, where outcomes can be distinctly listed out (e.g., number of heads in coin tosses)."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Multinomial Distribution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Case 1: 35\n",
+      "Case 2: 30\n",
+      "Case 3: 35\n"
+     ]
+    }
+   ],
+   "source": [
+    "# example of simulating a multinomial process\n",
+    "from numpy.random import multinomial\n",
+    "# define the parameters of the distribution\n",
+    "p = [1.0/3.0, 1.0/3.0, 1.0/3.0]\n",
+    "k = 100\n",
+    "\n",
+    "# run a single simulation\n",
+    "cases = multinomial(k, p)\n",
+    "# summarize cases\n",
+    "for i in range(len(cases)):\n",
+    "  print('Case %d: %d' % (i+1, cases[i]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Case=[35 30 35], Probability: 0.639%\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "# calculate the probability for a given number of events of each type\n",
+    "from scipy.stats import multinomial\n",
+    "# define the parameters of the distribution\n",
+    "p = [1.0/3.0, 1.0/3.0, 1.0/3.0]\n",
+    "k = 100\n",
+    "# define the distribution\n",
+    "dist = multinomial(k, p)\n",
+    "# define a specific number of outcomes from 100 trials cases = [33, 33, 34]\n",
+    "# calculate the probability for the case\n",
+    "pr = dist.pmf(cases)\n",
+    "# print as a percentage\n",
+    "print('Case=%s, Probability: %.3f%%' % (cases, pr*100))"
+   ]
   }
  ],
  "metadata": {
