added new notes

--- a/Mathematics/Statistics/Probaility-Jason-Brown-Lee/Distribution.ipynb
+++ b/Mathematics/Statistics/Probaility-Jason-Brown-Lee/Distribution.ipynb
@@ -403,6 +403,23 @@
     "high_end = dist.ppf(0.975)\n",
     "print('Middle 95%% between %.1f and %.1f' % (low_end, high_end))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exponential Distribution\n",
+    "#### The exponential distribution is a continuous probability distribution where a few outcomes are the most likely with a rapid decrease in probability to all other outcomes. It is the continuous random variable equivalent to the geometric probability distribution for discrete random variables. Some examples of domains that have exponential distribution events include:\n",
+    "\n",
+    "- The time between clicks on a Geiger counter.\n",
+    "- The time until the failure of a part.\n",
+    "- The time until the default of a loan."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
