added new notes

--- a/Mathematics/Statistics/Probaility-Jason-Brown-Lee/Distribution.ipynb
+++ b/Mathematics/Statistics/Probaility-Jason-Brown-Lee/Distribution.ipynb
@@ -413,13 +413,37 @@
     "\n",
     "- The time between clicks on a Geiger counter.\n",
     "- The time until the failure of a part.\n",
-    "- The time until the default of a loan."
+    "- The time until the default of a loan.\n",
+    "\n",
+    "#### Scale (Beta or β): The mean and standard deviation of the distribution.\n",
+    "#### Sometimes the distribution is defined more formally with a parameter lambda or rate. The beta parameter is defined as the reciprocal of the lambda parameter (β = 1/ λ )\n",
+    "#### Rate (lambda or λ) = Rate of change in the distribution.\n"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[  9.59015466  59.77805004 118.19784895   4.40230663 104.55521876\n",
+      " 199.14230676  20.18207989   1.48975058  23.1350719   42.93612796]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# sample an exponential distribution\n",
+    "from numpy.random import exponential\n",
+    "# define the distribution\n",
+    "beta = 50\n",
+    "n = 10\n",
+    "# generate the sample\n",
+    "sample = exponential(beta, n)\n",
+    "print(sample)"
+   ]
   }
  ],
  "metadata": {
