added new notes

--- a/Mathematics/Statistics/Probaility-Jason-Brown-Lee/Distribution.ipynb
+++ b/Mathematics/Statistics/Probaility-Jason-Brown-Lee/Distribution.ipynb
@@ -490,6 +490,18 @@
     "pyplot.plot(values, cprobs)\n",
     "pyplot.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Exponential Distribution: This distribution is often used to model the time between events in a process where events occur continuously and independently at a constant average rate. It's characterized by the parameter λ (rate parameter), which indicates the rate of events."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
